# Glin-s-Studio-App

./: CLAUDE.md  DESIGN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: seed.cjs
src/: App.css  App.jsx  db.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_shipped.sql  003_add_delivered.sql  004_shipped_at_pronouns.sql  005_quotes.sql  006_personal_payments.sql  007_social.sql  008_categories_sort_order.sql  009_subtasks.sql  010_project_workspace.sql  011_reminders.sql  012_materials_estimates.sql  013_todos.sql  014_ready.sql
src-tauri/src/: lib.rs  main.rs
src/components/: Workspace.jsx
src/pages/: Board.jsx  Calendar.jsx  Clients.jsx  Dashboard.jsx  Projects.jsx  Quotes.jsx  Sales.jsx  Social.jsx  Timekeeping.jsx  Todo.jsx
src/utils/: dates.js  images.js  money.js
