[package]
name = "glins-studio"
version = "0.1.0"
description = "Glin's Studio — business tracker for cosplay and sports costume work"
authors = ["Glin"]
edition = "2021"

[lib]
name = "glins_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

